--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,2 +1,3 @@
 option('tests', type: 'boolean', value: true)
 option('example', type: 'boolean', value: true)
+option('install_headers', type : 'boolean', value : false)
